<resources>
    <string name="app_name">Practica_S06</string>

    <string name="tv_mail">Correo</string>
    <string name="tv_clave">Contraseña</string>
    <string name="msg_fallo">Error…</string>

    <string name="title_activity_central">Central</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_estados">Estados</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="msg_nombre">Nombre del estado</string>
    <string name="msg_capital">Capital</string>
    <string name="msg_costas">Costas (999)</string>
    <string name="msg_poblacion">Población (9999999)</string>
    <string name="bt_add_estado">Agregar Estado</string>
    <string name="msg_estado_added">Estado Agregado...</string>
    <string name="msg_data">¡Faltan Datos!</string>
    <string name="bt_update_estado">Actualizar Estado</string>
    <string name="msg_estado_updated">Estado Actualizado...</string>
    <string name="bt_estado_deleted">Estado Eliminado...</string>
    <string name="bt_delete_estado">Eliminar Estado</string>
    <string name="msg_seguro_borrado">¿Está seguro de eliminar el estado: </string>
    <string name="msg_si">Sí</string>
    <string name="msg_no">No</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>